sfSandBoxCode/force-app/main/default/objects/Casuals_Job_Assignment__c/Casuals_Job_Assignment__c.object-meta.xml
<CustomObject>
    <label>Job Spec Assignment</label>
    <nameField>
        <displayFormat>JOB-ASSG-{000000}</displayFormat>
        <label>Job Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contractor-Job Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>