sfSandBoxCode/force-app/main/default/objects/Casuals_Job_Assignment__c/fields/Amount_Payable__c.field-meta.xml
<CustomField>
    <fullName>Amount_Payable__c</fullName>
    <formula>(Casual_Job_Line_Item__r.Rate__c  *  Casual_Job_Line_Item__r.Quantity__c)+ Casual_Job_Line_Item__r.Allowance_Per_Person__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total amount that this contractor should be paid</inlineHelpText>
    <label>Amount Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>