sfSandBoxCode/force-app/main/default/objects/Casuals_Job_Assignment__c/fields/Assignment_Department__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Department__c</fullName>
    <formula>Casual_Job_Line_Item__r.Department_Dim_1__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignment Department</label>
    <type>Text</type>
</CustomField>