sfSandBoxCode/force-app/main/default/objects/Casuals_Job_Assignment__c/fields/Casual__c.field-meta.xml
<CustomField>
    <fullName>Casual__c</fullName>
    <label>Contractor Name</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please ensure this contractor does not have any open jobs</errorMessage>
        <filterItems>
            <field>Casual__c.Grade__c</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Casual__c</referenceTo>
    <relationshipLabel>Contractor-Job Assignments</relationshipLabel>
    <relationshipName>Job_Requisitions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>