sfSandBoxCode/force-app/main/default/objects/Casuals_Job_Assignment__c/fields/Casual_Job_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Casual_Job_Line_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job Specification</label>
    <referenceTo>Casual_Job_Line_Item__c</referenceTo>
    <relationshipLabel>Contractor-Job Assignments</relationshipLabel>
    <relationshipName>Casual_Job_Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>