sfSandBoxCode/force-app/main/default/objects/Casuals_Job_Assignment__c/fields/Casual_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Casual_s_Name__c</fullName>
    <formula>Casual__r.Casual_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Casual&#39;s Name</label>
    <type>Text</type>
</CustomField>