sfSandBoxCode/force-app/main/default/objects/Casuals_Job_Assignment__c/fields/Days_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Days_Assigned__c</fullName>
    <formula>(End_dDate__c -  Start_dDate__c) +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Assigned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>