sfSandBoxCode/force-app/main/default/objects/Casuals_Job_Assignment__c/fields/End_dDate__c.field-meta.xml
<CustomField>
    <fullName>End_dDate__c</fullName>
    <formula>Casual_Job_Line_Item__r.End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Date</type>
</CustomField>