sfSandBoxCode/force-app/main/default/objects/Casuals_Job_Assignment__c/fields/FFA_Company__c.field-meta.xml
<CustomField>
    <fullName>FFA_Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>FFA Company</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>c2g__codaCompany__c.Name</field>
            <operation>equals</operation>
            <value>Fresh Life Initiative Limited,Sanergy Limited</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>c2g__codaCompany__c</referenceTo>
    <relationshipName>Job_Requisitions</relationshipName>
    <type>Lookup</type>
</CustomField>