sfSandBoxCode/force-app/main/default/objects/Casuals_Job_Assignment__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Night Watchman</fullName>
            </value>
            <value>
                <fullName>Driver (Cars &amp; Light Vans)</fullName>
            </value>
            <value>
                <fullName>Driver (Heavy Commercial Vehicle)</fullName>
            </value>
            <value>
                <fullName>Ungraded Artisan</fullName>
            </value>
            <value>
                <fullName>Artisan Grade III</fullName>
            </value>
            <value>
                <fullName>Artisan Grade II</fullName>
            </value>
            <value>
                <fullName>Artisan Grade</fullName>
            </value>
            <value>
                <fullName>General Laborer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>