sfSandBoxCode/force-app/main/default/objects/Casuals_Job_Assignment__c/fields/is_Overdue__c.field-meta.xml
<CustomField>
    <fullName>is_Overdue__c</fullName>
    <formula>AND(
 ISPICKVAL( Job_Status__c , &quot;Open&quot;),
 End_dDate__c &lt; Today()

)</formula>
    <label>is Overdue</label>
    <type>Checkbox</type>
</CustomField>