sfSandBoxCode/force-app/main/default/objects/Casuals_Job_Assignment__c/fields/Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Job_Description__c</fullName>
    <formula>Casual_Job_Line_Item__r.General_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Description</label>
    <type>Text</type>
</CustomField>