sfSandBoxCode/force-app/main/default/objects/Casuals_Job_Assignment__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nairobi</fullName>
                <default>true</default>
                <label>Nairobi</label>
            </value>
            <value>
                <fullName>Kinanie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>