sfSandBoxCode/force-app/main/default/objects/Casuals_Job_Assignment__c/fields/Number_of_Rate_Units__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Rate_Units__c</fullName>
    <formula>Casual_Job_Line_Item__r.Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Rate Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>