sfSandBoxCode/force-app/main/default/objects/Casuals_Job_Assignment__c/fields/Payment_Rate__c.field-meta.xml
<CustomField>
    <fullName>Payment_Rate__c</fullName>
    <formula>Casual_Job_Line_Item__r.Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>