sfSandBoxCode/force-app/main/default/objects/Casuals_Job_Assignment__c/fields/rate__c.field-meta.xml
<CustomField>
    <fullName>rate__c</fullName>
    <label>Payment rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>