sfSandBoxCode/force-app/main/default/objects/Casuals_Job_Assignment__c/fields/Rate_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Rate_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>