sfSandBoxCode/force-app/main/default/objects/Casuals_Job_Assignment__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <inlineHelpText>Below Expectations-0-60%
Meets Expectations-61-85%
Exceeds Expectations-86-100%</inlineHelpText>
    <label>Contractor Rating</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>