sfSandBoxCode/force-app/main/default/objects/Casuals_Job_Assignment__c/fields/Start_dDate__c.field-meta.xml
<CustomField>
    <fullName>Start_dDate__c</fullName>
    <formula>Casual_Job_Line_Item__r.Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>