sfSandBoxCode/force-app/main/default/objects/Casuals_Job_Assignment__c/fields/Total_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Total_Allowance__c</fullName>
    <label>Total Allowances</label>
    <summarizedField>Casual_Job_Assignment_Allowances__c.Total_Amount__c</summarizedField>
    <summaryForeignKey>Casual_Job_Assignment_Allowances__c.Casual_Job_Assignment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>