sfSandBoxCode/force-app/main/default/objects/Casuals_Job_Assignment__c/fields/Total_Allowances__c.field-meta.xml
<CustomField>
    <fullName>Total_Allowances__c</fullName>
    <inlineHelpText>SUM of all Allowances from TimeSheets</inlineHelpText>
    <label>Total TimeSheets Allowances</label>
    <summarizedField>Casuals_Timesheet__c.Total_Allowancess__c</summarizedField>
    <summaryForeignKey>Casuals_Timesheet__c.Job_Requisition__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>