sfSandBoxCode/force-app/main/default/objects/Casuals_Job_Assignment__c/fields/Total_Payment__c.field-meta.xml
<CustomField>
    <fullName>Total_Payment__c</fullName>
    <label>Total Payment</label>
    <summarizedField>Casuals_Timesheet__c.Total_Amount__c</summarizedField>
    <summaryForeignKey>Casuals_Timesheet__c.Job_Requisition__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>