sfSandBoxCode/force-app/main/default/objects/Casuals_Job_Assignment__c/recordTypes/Assignment_Record.recordType-meta.xml
<RecordType>
    <fullName>Assignment_Record</fullName>
    <active>true</active>
    <label>Assignment Record</label>
</RecordType>