sfSandBoxCode/force-app/main/default/objects/Casuals_Job_Assignment__c/recordTypes/Contractor_Assignment_Record.recordType-meta.xml
<RecordType>
    <fullName>Contractor_Assignment_Record</fullName>
    <active>true</active>
    <label>Contractor Assignment Record</label>
</RecordType>