sfSandBoxCode/force-app/main/default/objects/Casuals_Job_Assignment__c/validationRules/Check_If_Contractor_Is_Usable.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_If_Contractor_Is_Usable</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
  AND(
    ISNEW(),
    Casual__r.Assigned_Open_Jobs__c &gt; 0
  ),

  AND(
    NOT(ISNEW()),
    ISCHANGED(Casual__c),
    Casual__r.Assigned_Open_Jobs__c &gt; 1
  )
)</errorConditionFormula>
    <errorDisplayField>Casual__c</errorDisplayField>
    <errorMessage>Please ensure that this contractor does not have any open jobs</errorMessage>
</ValidationRule>