sfSandBoxCode/force-app/main/default/objects/Casuals_Job_Assignment__c/validationRules/Contractor_Must_Match_Job_Grade.validationRule-meta.xml
<ValidationRule>
    <fullName>Contractor_Must_Match_Job_Grade</fullName>
    <active>false</active>
    <errorConditionFormula>TEXT(Casual_Job_Line_Item__r.Grade__c)!= TEXT(Casual__r.Grade__c)</errorConditionFormula>
    <errorDisplayField>Casual__c</errorDisplayField>
    <errorMessage>Please select a Contractor who matches the Job Grade Specified in the Job Description</errorMessage>
</ValidationRule>