sfSandBoxCode/force-app/main/default/objects/Casuals_Job_Assignment__c/validationRules/End_date_not_less_that_start_date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_date_not_less_that_start_date</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c &gt;  End_Date__c</errorConditionFormula>
    <errorMessage>End date should not be less than start date</errorMessage>
</ValidationRule>