sfSandBoxCode/force-app/main/default/objects/Casuals_Job_Assignment__c/validationRules/Rate_Contractor_before_closing_Job.validationRule-meta.xml
<ValidationRule>
    <fullName>Rate_Contractor_before_closing_Job</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  
     ISNULL( Rating__c )  ,
     ISPICKVAL( Job_Status__c , &quot;Closed&quot;) )</errorConditionFormula>
    <errorDisplayField>Rating__c</errorDisplayField>
    <errorMessage>Please rate the Contractor first (Between 1 and 100)</errorMessage>
</ValidationRule>