sfSandBoxCode/force-app/main/default/objects/Casuals_Job_Assignment__c/validationRules/Validate_requisition_dates_against_job.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_requisition_dates_against_job</fullName>
    <active>true</active>
    <description>Ensure that the dates for the job requisition are within the job&#39;s date duration</description>
    <errorConditionFormula>OR(
  Start_Date__c &lt;   Casual_Job_Line_Item__r.Start_Date__c  ,
  End_Date__c   &gt;   Casual_Job_Line_Item__r.End_Date__c 
)</errorConditionFormula>
    <errorMessage>The Start Date and End Date of this Casual-Job Assignment should not fall out of the time duration specified on the job line item</errorMessage>
</ValidationRule>